Improve demos readme...

--- a/src/demo.html
+++ b/src/demo.html
@@ -60,6 +60,7 @@
       <a href="demo/11.html"></a>
       <a href="demo/12.html"></a>
       <a href="demo/13.html"></a>
+      <a href="demo/14.html"></a>
     </div>
   </main>
 
