--- a/src/demo/2.html
+++ b/src/demo/2.html
@@ -19,19 +19,22 @@
     <div class="demo-layout__readme">
 
       <h1>One line</h1>
-      <p>By default, <code>.bfg__box</code> elements are displayed on one line and can NOT leave outside the <code>.bfg</code> block.</p>
+      <p>By default, <code>.bfg__box</code> elements are displayed onto one line and can not leave outside the <code>.bfg</code> block.</p>
+      <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__playground">
+  <pre class="demo-layout__output">
+    <div class="demo-layout__playground">
 
-    <div class="bfg bfg--row">
-      <div class="bfg__box bfg__box--2"></div>
-      <div class="bfg__box bfg__box--4"></div>
-      <div class="bfg__box bfg__box--6"></div>
+      <div class="bfg bfg--row">
+        <div class="bfg__box bfg__box--2"></div>
+        <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--6"></div>
+      </div>
+
     </div>
-
-  </div></pre>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
