--- a/src/demo/7.html
+++ b/src/demo/7.html
@@ -18,25 +18,27 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Nested grid in the same direction</h1>
-      <p>It works too!</p>
+      <h1>Chained grid in the same direction</h1>
+      <p>Works too!</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__playground">
+  <pre class="demo-layout__output">
+    <div class="demo-layout__playground">
 
-    <div class="bfg bfg--row">
-      <div class="bfg__box bfg__box--4"></div>
-      <div class="bfg__box bfg__box--4 bfg bfg--row">
+      <div class="bfg bfg--row">
+        <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--4 bfg bfg--row">
 
-        <div class="bfg__box bfg__box--6"></div>
-        <div class="bfg__box bfg__box--6"></div>
+          <div class="bfg__box bfg__box--6"></div>
+          <div class="bfg__box bfg__box--6"></div>
 
+        </div>
+        <div class="bfg__box bfg__box--4"></div>
       </div>
-      <div class="bfg__box bfg__box--4"></div>
-    </div>
 
-  </div></pre>
+    </div>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
