--- a/src/demo/1.html
+++ b/src/demo/1.html
@@ -18,8 +18,9 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Simple grid</h1>
-      <p>The minimal markup.</p>
+      <h1>Basics</h1>
+      <p>At core the grid system consists of one block <code>.bfg</code> and one element <code>.bfg__box</code>.</p>
+      <p>It is required to define the direction the <code>.bfg__box</code> elements are placed in the <code>.bfg</code> block, using <code>.bfg--row</code> or <code>.bfg--col</code> modifiers.</p>
 
     </div>
   </div>
