--- a/src/demo/11.html
+++ b/src/demo/11.html
@@ -18,40 +18,26 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Boxe size</h1>
-
-      <p>There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.</p>
-
-      <p>In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
+      <h1>Fixed box size in pixels</h1>
+      <p>To fix the height of a particular box in pixels, use <code>.bfg__box--fit</code> modifier and give the box the expected <code>height</code>.</p>
+      <p>To see it in action, resize the window.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output demo-layout__output--gray"><div class="demo-layout__playground">
+  <pre class="demo-layout__output">
+    <div class="demo-layout__playground">
 
-    <div class="bfg bfg--row bfg--gap bfg--wrap">
-      <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
+      <div class="bfg bfg--col">
+        <div class="bfg__box bfg__box--fit" style="height:100px">
+            <i>100px height</i>
+        </div>
+        <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--8"></div>
+      </div>
 
-      <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
-
-      <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
-
-      <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
-
-      <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
-
-      <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
-
-      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
-      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
     </div>
+  </pre>
 
-  </div></pre>
-
-  <script>Demo.viewCode(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight']);</script>
 </body>
 </html>
