--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -18,57 +18,40 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Mixing chained and nested grids</h1>
-
-      <p>If you use <code>.bfg--gap</code> modifier, you need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of the nested grid.</p>
+      <h1>Boxe size</h1>
+      <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
+      <p>In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__playground">
+  <pre class="demo-layout__output demo-layout__output--gray">
+    <div class="demo-layout__playground">
 
-    <div class="bfg bfg--col bfg--gap">
-      <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- interlaced -->
+      <div class="bfg bfg--row bfg--gap bfg--wrap">
+        <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
 
-        <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- interlaced -->
+        <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
 
-          <div class="bfg__box bfg__box--6"></div>
-          <div class="bfg__box bfg__box--6"></div>
+        <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
 
-        </div>
-        <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
-          <div class="bfg bfg--col"><!-- nested -->
+        <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
 
-            <div class="bfg__box bfg__box--6"></div>
-            <div class="bfg__box bfg__box--6"></div>
+        <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
 
-          </div>
-        </div>
+        <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
 
+        <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
       </div>
-      <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
 
-        <div class="bfg bfg--row"><!-- nested -->
-          <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- interlaced -->
-
-            <div class="bfg__box bfg__box--6"></div>
-            <div class="bfg__box bfg__box--6"></div>
-
-          </div>
-          <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
-            <div class="bfg bfg--col"><!-- nested -->
-
-              <div class="bfg__box bfg__box--6"></div>
-              <div class="bfg__box bfg__box--6"></div>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
+  </pre>
 
-  </div></pre>
-
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.enableActions();</script>
 </body>
 </html>
