--- a/src/demo/8.html
+++ b/src/demo/8.html
@@ -18,30 +18,29 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Remaining space distribution</h1>
-
-      <p>
-        When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
-        <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
-        <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
-      </p>
+      <h1>Nested grid in the same direction</h1>
+      <p>Works too!</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output"><div class="demo-layout__playground">
+  <pre class="demo-layout__output">
+    <div class="demo-layout__playground">
 
-    <div class="bfg bfg--row bfg--main-between">
-      <div class="bfg__box bfg__box--2"></div>
-      <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-        <i>Fixed box</i>
+      <div class="bfg bfg--row">
+        <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--4">
+
+          <div class="bfg bfg--row">
+            <div class="bfg__box bfg__box--6"></div>
+            <div class="bfg__box bfg__box--6"></div>
+          </div>
+
+        </div>
+        <div class="bfg__box bfg__box--4"></div>
       </div>
-      <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-        <i>Fixed box</i>
-      </div>
-      <div class="bfg__box bfg__box--4"></div>
+
     </div>
-
-  </div></pre>
+  </pre>
 
   <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
