Make www responsive (in progress...)

--- a/src/demo.html
+++ b/src/demo.html
@@ -30,16 +30,18 @@
   </header>
 
   <header class="www-header">
-    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow">
+    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow bfg--sm-disabled">
       <h1 class="bfg__box bfg__box--fit www-header__title">
         <a href="./">Bem Flex Grid</a>
       </h1>
 
-      <div class="bfg__box bfg__box--fit www-logo">
-        <div class="www-logo__square www-logo__square--1"></div>
-        <div class="www-logo__square www-logo__square--2"></div>
-        <div class="www-logo__square www-logo__square--3"></div>
-        <div class="www-logo__square www-logo__square--4"></div>
+      <div class="bfg__box bfg__box--fit">
+        <div class="www-logo">
+          <div class="www-logo__square www-logo__square--1"></div>
+          <div class="www-logo__square www-logo__square--2"></div>
+          <div class="www-logo__square www-logo__square--3"></div>
+          <div class="www-logo__square www-logo__square--4"></div>
+        </div>
       </div>
     </div>
     <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
