--- a/src/demo.html
+++ b/src/demo.html
@@ -31,11 +31,7 @@
 
   <header class="www-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow bfg--sm-disabled">
-      <h1 class="bfg__box bfg__box--fit www-header__title">
-        <a href="./">Bem Flex Grid</a>
-      </h1>
-
-      <div class="bfg__box bfg__box--fit">
+      <div class="bfg__box bfg__box--fit bfg__box--last">
         <div class="www-logo">
           <div class="www-logo__square www-logo__square--1"></div>
           <div class="www-logo__square www-logo__square--2"></div>
@@ -43,6 +39,10 @@
           <div class="www-logo__square www-logo__square--4"></div>
         </div>
       </div>
+
+      <h1 class="bfg__box bfg__box--fit www-header__title">
+        <a href="./">Bem Flex Grid</a>
+      </h1>
     </div>
     <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
   </header>
