--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
-  <html lang="en" class="markdown-body">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en" class="markdown-body">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bem Flex Grid</title>
+  <title>Bem Flex Grid</title>
 
-    <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
+  <link rel="stylesheet" href="../node_modules/primer-markdown/build/build.css">
 
-    <link rel="stylesheet" href="../node_modules/prismjs/themes/prism.css">
-    <script src="../node_modules/prismjs/prism.js"></script>
-    <script src="../node_modules/prismjs/components/prism-scss.min.js"></script>
-    <script src="../node_modules/prismjs/components/prism-bash.min.js"></script>
+  <link rel="stylesheet" href="../node_modules/prismjs/themes/prism.css">
+  <script src="../node_modules/prismjs/prism.js"></script>
+  <script src="../node_modules/prismjs/components/prism-scss.min.js"></script>
+  <script src="../node_modules/prismjs/components/prism-bash.min.js"></script>
 
-    <link rel="stylesheet" href="styles/demo.scss">
-    <link rel="stylesheet" href="styles/www.scss">
-    <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="styles/demo.scss">
+  <link rel="stylesheet" href="styles/www.scss">
+  <link rel="stylesheet" href="lib/bem-flex-grid.ie11.scss">
 
-    <style>
-      pre[class*="language-"] { background:#f6f8fa }
-      .markdown-body h3 { color: #C62828; }
-      table { border-collapse: collapse; }
-      th { text-align: left; }
-    </style>
-  </head>
-  <body>
-    <div class="www-navbar www-navbar--back">
-      <div class="www-container">
-        <a href="./" class="www-navbar__link">Bem Flex Grid</a>
+  <style>
+    pre[class*="language-"] { background:#f6f8fa }
+    .markdown-body h3 { color: #C62828; }
+    table { border-collapse: collapse; }
+    th { text-align: left; }
+  </style>
+</head>
+<body>
+  <div class="www-navbar www-navbar--back">
+    <div class="www-container">
+      <a href="./" class="www-navbar__link">Bem Flex Grid</a>
+    </div>
+  </div>
+  <header class="www-navbar www-navbar--front">
+    <div class="www-container">
+      <a href="./" class="www-navbar__link">doc</a>
+      <a href="demo.html" class="www-navbar__link">demo</a>
+      <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">github</a>
+    </div>
+  </header>
+
+  <header class="www-header">
+    <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow bfg--sm-disabled">
+      <div class="bfg__box bfg__box--fit bfg__box--last">
+        <div class="www-logo">
+          <div class="www-logo__square www-logo__square--1"></div>
+          <div class="www-logo__square www-logo__square--2"></div>
+          <div class="www-logo__square www-logo__square--3"></div>
+          <div class="www-logo__square www-logo__square--4"></div>
+        </div>
+      </div>
+
+      <div class="bfg__box bfg__box--fit www-header__title"><!-- note: "h1" replaced by "div" -->
+        <a href="./">Bem Flex Grid</a>
       </div>
     </div>
-    <header class="www-navbar www-navbar--front">
-      <div class="www-container">
-        <a href="./" class="www-navbar__link">doc</a>
-        <a href="demo.html" class="www-navbar__link">demo</a>
-        <a href="https://github.com/avine/bem-flex-grid/" class="www-navbar__link">github</a>
-      </div>
-    </header>
+    <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
+  </header>
 
-    <header class="www-header">
-      <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow bfg--sm-disabled">
-        <div class="bfg__box bfg__box--fit bfg__box--last">
-          <div class="www-logo">
-            <div class="www-logo__square www-logo__square--1"></div>
-            <div class="www-logo__square www-logo__square--2"></div>
-            <div class="www-logo__square www-logo__square--3"></div>
-            <div class="www-logo__square www-logo__square--4"></div>
-          </div>
-        </div>
-
-        <div class="bfg__box bfg__box--fit www-header__title"><!-- note: "h1" replaced by "div" -->
-          <a href="./">Bem Flex Grid</a>
-        </div>
-      </div>
-      <h2 class="www-header__subtitle">CSS flex grid, BEM compliant.</h2>
-    </header>
-
-    <main class="www-container">
+  <main class="www-container">
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
@@ -442,7 +442,7 @@ $bfg-breakpoints: (
 <pre><code class="language-scss">// Overwrite gap
 $bfg-gap: 2rem;
 
-@import &quot;[PATH_TO]/bem-flex-grid.scss&quot;;
+@import &quot;[PATH_TO]/node_modules/bem-flex-grid/src/lib/bem-flex-grid.scss&quot;;
 </code></pre>
 <h3>Mixin</h3>
 <p>The <code>bfg-theme</code> mixin allows you to customize the content look and feel.</p>
@@ -450,7 +450,7 @@ $bfg-gap: 2rem;
 </code></pre>
 <p><strong>Example:</strong></p>
 <p>To add a new theme with name <code>info</code>, create a new file <code>my-custo-bfg.scss</code> with the following content:</p>
-<pre><code class="language-scss">@import &quot;[PATH_TO]/bem-flex-grid.scss&quot;;
+<pre><code class="language-scss">@import &quot;[PATH_TO]/node_modules/bem-flex-grid/src/lib/bem-flex-grid.scss&quot;;
 
 // Add new theme
 @include bfg-theme(info, (
@@ -635,10 +635,10 @@ npm start
 </code></pre>
 
 
-    </main>
+  </main>
 
-    <footer class="www-footer">
-      Made with <b>&hearts;</b> by Avine.
-    </footer>
+  <footer class="www-footer">
+    Made with <b>&hearts;</b> by Avine.
+  </footer>
 </body>
 </html>
