--- a/src/demo/15.html
+++ b/src/demo/15.html
@@ -29,34 +29,34 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--col bfg--gap">
-        <div class="bfg__box bfg__box--6">
+        <div class="bfg__box bfg__box--6 bfg__box--theme-light">
           <!-- content with header -->
-          <header class="bfg__header bfg__header--light">Header</header>
-          <div class="bfg__content bfg__content--light">
+          <header class="bfg__header">Header</header>
+          <div class="bfg__content">
             <div class="demo-chart"></div>
           </div>
         </div>
 
         <div class="bfg__box bfg__box--6 bfg bfg--row">
-          <div class="bfg__box bfg__box--3">
+          <div class="bfg__box bfg__box--3 bfg__box--theme-light">
             <!-- content with header and actions -->
-            <div class="bfg__action bfg__action--light"><a href="#action-2">Action 2</a></div>
-            <div class="bfg__action bfg__action--light"><a href="#action-1">Action 1</a></div>
-            <header class="bfg__header bfg__header--light">Very very very long Header</header>
-            <div class="bfg__content bfg__content--light">
+            <div class="bfg__action"><a href="#action-2">Action 2</a></div>
+            <div class="bfg__action"><a href="#action-1">Action 1</a></div>
+            <header class="bfg__header">Very very very long Header</header>
+            <div class="bfg__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--6">
-            <div class="bfg__content bfg__content--light">
+          <div class="bfg__box bfg__box--6 bfg__box--theme-light">
+            <div class="bfg__content">
               <div class="demo-chart"></div>
             </div>
           </div>
 
-          <div class="bfg__box bfg__box--3">
-            <header class="bfg__header bfg__header--light">Header</header>
-            <div class="bfg__content bfg__content--light">
+          <div class="bfg__box bfg__box--3 bfg__box--theme-light">
+            <header class="bfg__header">Header</header>
+            <div class="bfg__content">
               <div class="demo-chart"></div>
             </div>
           </div>
