--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -20,7 +20,7 @@
 
       <h1>Boxe size</h1>
       <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
-      <p>In this demo we also add a new <code>div</code> with <code>.bfg__content.bfg__content--light</code> to fill the boxes content.</p>
+      <p>In this demo we also add <code>.bfg__box--theme-light</code> modifier to fill the <code>.bfg__content</code> element.</p>
 
     </div>
   </div>
@@ -28,25 +28,25 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--row bfg--gap bfg--wrap">
-        <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--12 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--11 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--1 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--10 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--2 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--9 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--3 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--8 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--4 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--7 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--5 bfg__box--theme-light"><div class="bfg__content"></div></div>
 
-        <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
-        <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--light"></div></div>
+        <div class="bfg__box bfg__box--6 bfg__box--theme-light"><div class="bfg__content"></div></div>
+        <div class="bfg__box bfg__box--6 bfg__box--theme-light"><div class="bfg__content"></div></div>
       </div>
 
     </div>
